[gd_scene format=3 uid="uid://bq5n6hb4g3n3s"]

[ext_resource type="Texture2D" uid="uid://biv2euh60poad" path="res://resources/player_sprites/Mario 16x32.png" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://ducanrspkbnuf" path="res://scenes/particles/punch_particles.tscn" id="2_6cv16"]
[ext_resource type="PackedScene" uid="uid://doc7hm2qog8oq" path="res://scenes/combat_damage_areas/hitbox.tscn" id="2_l71n6"]
[ext_resource type="Script" uid="uid://bc0677nhaiq5w" path="res://scripts/player scripts/player.gd" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://bw8qxgb5g4s8d" path="res://resources/player_sprites/mario 32x32.png" id="3_fjrip"]
[ext_resource type="Texture2D" uid="uid://dxofjn63a6aye" path="res://resources/player_sprites/mario 43x32.png" id="3_oprun"]
[ext_resource type="Script" uid="uid://bj3cgp0ej3wlu" path="res://scripts/player scripts/state machine/state_machine.gd" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://bkfatdr80fgje" path="res://resources/player_sprites/mario 20x32 2.png" id="4_3v2ag"]
[ext_resource type="Script" uid="uid://dswhcrsir4xqj" path="res://scripts/player scripts/state machine/states/idle.gd" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://bao6y4f4li6oi" path="res://resources/player_sprites/mario 20x32.png" id="4_y4r1p"]
[ext_resource type="Script" uid="uid://cheewpaidumvb" path="res://scripts/player scripts/state machine/states/walk.gd" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://d05fcq0lp4aej" path="res://resources/player_sprites/mario 30x32.png" id="6_4r5pv"]
[ext_resource type="Script" uid="uid://cxedr2qfqfyul" path="res://scripts/player scripts/state machine/states/jump.gd" id="6_tuyoq"]
[ext_resource type="Texture2D" uid="uid://c527omubet1eg" path="res://resources/player_sprites/mario 38x42.png" id="8_i4ail"]
[ext_resource type="Script" uid="uid://ds7sogum3th05" path="res://scripts/player scripts/state machine/states/fall.gd" id="8_smehm"]
[ext_resource type="Script" uid="uid://dtgxjmlyahwy2" path="res://scripts/player scripts/state machine/states/sprint.gd" id="9_ur7pv"]
[ext_resource type="Script" uid="uid://b45c2ji84qe4y" path="res://scripts/player scripts/camera_2d.gd" id="10_007i1"]
[ext_resource type="Script" uid="uid://d4afkkgdf378f" path="res://scripts/player scripts/state machine/states/land.gd" id="12_jej6c"]
[ext_resource type="Script" uid="uid://b2121jaw2uvom" path="res://scripts/player scripts/state machine/states/crouch.gd" id="13_jej6c"]
[ext_resource type="Script" uid="uid://41qs2irxlcjs" path="res://scripts/player scripts/state machine/states/dive.gd" id="15_a8ls1"]
[ext_resource type="Script" uid="uid://c1rg86wsrvhwo" path="res://scripts/player scripts/state machine/states/roll.gd" id="16_a8ls1"]
[ext_resource type="Script" uid="uid://dr1nxap8axb4f" path="res://scripts/player scripts/state machine/states/slide.gd" id="17_qfm1y"]
[ext_resource type="Script" uid="uid://fwxsp3uo5oph" path="res://scripts/player scripts/state machine/states/skid.gd" id="18_fulsm"]
[ext_resource type="Script" uid="uid://dm5prstk5mncw" path="res://scripts/player scripts/state machine/states/punch.gd" id="20_60mlk"]
[ext_resource type="Script" uid="uid://fartyl3h1fki" path="res://scripts/player scripts/state machine/states/roll_attack.gd" id="22_a38lo"]
[ext_resource type="Script" uid="uid://0cgopsbu4s55" path="res://scripts/player scripts/state machine/states/bounce.gd" id="23_4ni07"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke2ow"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_007i1"]
size = Vector2(10, 5.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("6_4r5pv")
region = Rect2(76, 96, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_g2els")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("6_4r5pv")
region = Rect2(0, 96, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("6_4r5pv")
region = Rect2(114, 64, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("6_4r5pv")
region = Rect2(114, 96, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("6_4r5pv")
region = Rect2(0, 64, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("6_4r5pv")
region = Rect2(38, 64, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("6_4r5pv")
region = Rect2(76, 64, 38, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ke2ow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}],
"loop": true,
"name": &"Fall_legs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}],
"loop": true,
"name": &"Idle_legs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"Idle_punch_legs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}],
"loop": true,
"name": &"Jump_legs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}],
"loop": true,
"name": &"Jump_punch_legs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}],
"loop": true,
"name": &"Run_legs",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_g2els")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("1_g2els")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_oprun")
region = Rect2(0, 0, 43, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_fjrip")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_g2els")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_g2els")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_fjrip")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("4_3v2ag")
region = Rect2(20, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("6_4r5pv")
region = Rect2(0, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("6_4r5pv")
region = Rect2(38, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("6_4r5pv")
region = Rect2(76, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("6_4r5pv")
region = Rect2(114, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("6_4r5pv")
region = Rect2(0, 32, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("6_4r5pv")
region = Rect2(38, 32, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("6_4r5pv")
region = Rect2(76, 32, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("6_4r5pv")
region = Rect2(114, 32, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("4_y4r1p")
region = Rect2(0, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("4_y4r1p")
region = Rect2(20, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("4_y4r1p")
region = Rect2(40, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("4_y4r1p")
region = Rect2(60, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_g2els")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_g2els")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_g2els")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_g2els")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_fjrip")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("8_i4ail")
region = Rect2(0, 0, 38, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("8_i4ail")
region = Rect2(38, 0, 38, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("8_i4ail")
region = Rect2(76, 0, 38, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("8_i4ail")
region = Rect2(114, 0, 38, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_dqkch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"Crouch",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"Dive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}],
"loop": true,
"name": &"Idle_torso",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": false,
"name": &"Land",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}],
"loop": false,
"name": &"Punch_left_torso",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}],
"loop": false,
"name": &"Punch_right_torso",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"Roll",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"Run_torso",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"Skid",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"Slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}],
"loop": false,
"name": &"Uppercut",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(10, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfm1y"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fulsm"]
size = Vector2(10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4r5pv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ni07"]

[node name="player" type="CharacterBody2D" unique_id=80837118 groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_qhqgy")
punch_particles_scene = ExtResource("2_6cv16")

[node name="Punch_hitbox" parent="." unique_id=1886767516 instance=ExtResource("2_l71n6")]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" parent="Punch_hitbox" index="0"]
position = Vector2(12.5, -1.5)
shape = SubResource("RectangleShape2D_ke2ow")

[node name="Roll_hitbox" parent="." unique_id=1145478363 instance=ExtResource("2_l71n6")]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" parent="Roll_hitbox" index="0"]
position = Vector2(0, 19.25)
shape = SubResource("RectangleShape2D_007i1")

[node name="Punch_Particle_Spawner" type="Marker2D" parent="." unique_id=280919456]
position = Vector2(13, -1)

[node name="Roll_Particle_Spawner" type="Marker2D" parent="." unique_id=1366153484]
position = Vector2(0, 19)

[node name="legs" type="AnimatedSprite2D" parent="." unique_id=518097407]
sprite_frames = SubResource("SpriteFrames_ke2ow")
animation = &"Jump_punch_legs"

[node name="torso" type="AnimatedSprite2D" parent="." unique_id=1561037181]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_dqkch")
animation = &"Punch_left_torso"
offset = Vector2(0, -16)

[node name="Camera2D" type="Camera2D" parent="." unique_id=351843604]
zoom = Vector2(3, 3)
process_callback = 0
position_smoothing_enabled = true
script = ExtResource("10_007i1")

[node name="StandCollision" type="CollisionShape2D" parent="." unique_id=1125034837]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_g2els")

[node name="EvasionCollision" type="CollisionShape2D" parent="." unique_id=1490021099]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_qfm1y")
disabled = true

[node name="JumpCollision" type="CollisionShape2D" parent="." unique_id=544861981]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_fulsm")
disabled = true

[node name="EvasionDetector" type="ShapeCast2D" parent="." unique_id=624610035]
position = Vector2(0, 1)
scale = Vector2(0.5, 0.5)
enabled = false
shape = SubResource("RectangleShape2D_4r5pv")
target_position = Vector2(0, -10)

[node name="RollBounceDetector" type="ShapeCast2D" parent="." unique_id=1079932071]
position = Vector2(0, 12)
scale = Vector2(0.5, 0.5)
enabled = false
shape = SubResource("RectangleShape2D_4ni07")
target_position = Vector2(0, 5)
collision_mask = 5

[node name="StateMachine" type="Node" parent="." unique_id=111984373 node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_qhqgy")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" unique_id=319773341]
script = ExtResource("4_dqkch")

[node name="Walk" type="Node" parent="StateMachine" unique_id=860796768]
script = ExtResource("5_qlg0r")

[node name="Jump" type="Node" parent="StateMachine" unique_id=1005036115]
script = ExtResource("6_tuyoq")

[node name="Fall" type="Node" parent="StateMachine" unique_id=1021218075]
script = ExtResource("8_smehm")

[node name="Sprint" type="Node" parent="StateMachine" unique_id=238029025]
script = ExtResource("9_ur7pv")

[node name="Land" type="Node" parent="StateMachine" unique_id=15975081]
script = ExtResource("12_jej6c")

[node name="Crouch" type="Node" parent="StateMachine" unique_id=631882855]
script = ExtResource("13_jej6c")

[node name="Dive" type="Node" parent="StateMachine" unique_id=433480926]
script = ExtResource("15_a8ls1")

[node name="Roll" type="Node" parent="StateMachine" unique_id=278418146]
script = ExtResource("16_a8ls1")

[node name="Slide" type="Node" parent="StateMachine" unique_id=340297247]
script = ExtResource("17_qfm1y")

[node name="Skid" type="Node" parent="StateMachine" unique_id=1832502672]
script = ExtResource("18_fulsm")

[node name="Punch" type="Node" parent="StateMachine" unique_id=1316599610]
script = ExtResource("20_60mlk")

[node name="RollAttack" type="Node" parent="StateMachine" unique_id=593875675]
script = ExtResource("22_a38lo")

[node name="Bounce" type="Node" parent="StateMachine" unique_id=1714492110]
script = ExtResource("23_4ni07")

[editable path="Punch_hitbox"]
[editable path="Roll_hitbox"]
